--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -1,14 +1,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/nav_home"
+        android:id="@+id/nav_inicio"
         android:icon="@drawable/ic_home"
         android:title="Inicio" />
     <item
-        android:id="@+id/nav_mensajes"
+        android:id="@+id/nav_notif"
         android:icon="@drawable/ic_notifications"
         android:title="Notificaciones" />
     <item
-        android:id="@+id/nav_sos"
+        android:id="@+id/nav_mapa"
         android:icon="@drawable/ic_location"
         android:title="Mapa" />
     <item
