--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/mainDrawer"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#212121"
     tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/txtDescripcion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="202dp"
-        android:gravity="center"
-        android:text="Presione SOS para enviar una alerta a sus contactos de confianza"
-        android:textColor="@android:color/white"
-        android:textSize="16sp" />
-
-
-
-    <Button
-        android:id="@+id/btnSOS"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:text="SOS"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:layout_marginTop="102dp"
-        android:backgroundTint="#E53935"
-        android:layout_gravity="center"
-        android:padding="0dp" />
-
-
-
-</LinearLayout>
-
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <!-- Contenedor para fragments -->
+    <!-- Contenedor de fragments -->
     <FrameLayout
         android:id="@+id/contenedor_fragmentos"
         android:layout_width="match_parent"
@@ -59,4 +23,5 @@
         app:menu="@menu/menu_bottom" />
 
 </LinearLayout>
+
 
