--- a/app/src/main/res/layout/fragment_config_seleccionar_contacto.xml
+++ b/app/src/main/res/layout/fragment_config_seleccionar_contacto.xml
@@ -37,16 +37,17 @@
         app:layout_constraintBottom_toBottomOf="@id/btnregresar"/>
 
     <!-- Ejemplo de contenido debajo -->
+
     <RadioButton
         android:id="@+id/radiobtnContacto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="56dp"
+        android:layout_marginTop="28dp"
         android:text="RadioButton"
         android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnregresar"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"/>
+        app:layout_constraintTop_toBottomOf="@id/btnregresar" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnaceptar"
