--- a/app/src/main/res/layout/fragment_config.xml
+++ b/app/src/main/res/layout/fragment_config.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#2E2E2E"
-    tools:context=".ConfigFragment">
+    tools:context=".Configuraciones.ConfigFragment">
 
     <TextView
         android:id="@+id/txtTituloConfiguracion"
@@ -226,11 +226,6 @@
                 android:layout_width="36dp"
                 android:layout_height="36dp"
                 android:src="@drawable/ic_default_profile"
-
-                android:contentDescription="Contacto SOS"
-
-                android:contentDescription="Notificaci贸n"
-
                 app:tint="@android:color/black" />
 
             <LinearLayout
@@ -298,9 +293,6 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
-
-</LinearLayout>
 
 
 </LinearLayout>
