--- a/app/src/main/res/layout/fragment_config_seleccionar_contacto.xml
+++ b/app/src/main/res/layout/fragment_config_seleccionar_contacto.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="#212121">
 
+    <!-- Botón regresar -->
     <androidx.appcompat.widget.AppCompatImageButton
         android:id="@+id/btnregresar"
         android:layout_width="40dp"
@@ -20,6 +21,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"/>
 
+    <!-- Título -->
     <TextView
         android:id="@+id/txtview"
         android:layout_width="0dp"
@@ -36,19 +38,30 @@
         app:layout_constraintTop_toTopOf="@id/btnregresar"
         app:layout_constraintBottom_toBottomOf="@id/btnregresar"/>
 
-    <!-- Ejemplo de contenido debajo -->
-
-    <RadioButton
-        android:id="@+id/radiobtnContacto"
-        android:layout_width="wrap_content"
+    <!-- SearchView para buscar contactos -->
+    <androidx.appcompat.widget.SearchView
+        android:id="@+id/searchViewContacts"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="28dp"
-        android:text="RadioButton"
-        android:textColor="@android:color/white"
+        android:queryHint="Buscar contacto..."
+        android:iconifiedByDefault="false"
+        app:layout_constraintTop_toBottomOf="@id/txtview"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btnregresar" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
 
+    <!-- RecyclerView donde se listarán los contactos -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerContactos"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/btnregresar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnaceptar" />
+
+    <!-- Botón aceptar -->
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnaceptar"
         android:layout_width="0dp"
@@ -60,6 +73,6 @@
         app:cornerRadius="24dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
