--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -9,7 +9,7 @@
     android:orientation="vertical"
     android:padding="20dp"
     android:fitsSystemWindows="true"
-    tools:context=".PerfilFragment">
+    tools:context=".Perfil.PerfilFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
