--- a/app/src/main/res/layout/fragment_msj_sos.xml
+++ b/app/src/main/res/layout/fragment_msj_sos.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#2E2E2E"
@@ -12,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
-        android:text="EDITAR MENSAJE SOS"
+        android:text="EDITAR MENSAJE"
         android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -25,7 +26,7 @@
         android:id="@+id/mensaje_sos"
         android:layout_width="0dp"
         android:layout_height="150dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="156dp"
         android:background="@drawable/cuadro_editable"
         android:gravity="top|start"
         android:hint=" "
@@ -55,5 +56,15 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mensaje_sos" />
+
+    <ImageButton
+        android:id="@+id/btn_regresar"
+        android:layout_width="59dp"
+        android:layout_height="42dp"
+        android:background="@android:color/transparent"
+        android:padding="22dp"
+        android:src="@drawable/ic_flecha_volver"
+        tools:layout_editor_absoluteX="-13dp"
+        tools:layout_editor_absoluteY="33dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
