--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -1,34 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#212121"
     tools:context=".MainActivity">
+
+    <!-- Botón principal SOS -->
+    <Button
+        android:id="@+id/btnSOS"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:backgroundTint="#E53935"
+        android:text="SOS"
+        android:fontFamily="sans-serif-black"
+        android:textSize="50sp"
+        android:textColor="@android:color/white"
+        android:elevation="12dp"
+        android:stateListAnimator="@null"
+        android:shape="oval"
+        android:padding="0dp" />
 
     <TextView
         android:id="@+id/txtDescripcion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="202dp"
+        android:fontFamily="@font/afacad"
         android:gravity="center"
-        android:text="Presione SOS para enviar una alerta a sus contactos de confianza"
+        android:text="Toca para mandar SOS"
         android:textColor="@android:color/white"
-        android:textSize="16sp" />
-
-    <Button
-        android:id="@+id/btnSOS"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:text="SOS"
-        android:textColor="@android:color/white"
-        android:textSize="20sp"
-        android:layout_marginTop="102dp"
-        android:backgroundTint="#E53935"
-        android:layout_gravity="center"
-        android:padding="0dp" />
+        android:textSize="26sp" />
 
 </FrameLayout>
