--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -2,13 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_perfil"
-            android:icon="@drawable/ic_person"
-            android:title="Perfil" />
+            android:id="@+id/nav_inicio"
+            android:icon="@drawable/ic_home"
+            android:title="Inicio" />
         <item
             android:id="@+id/nav_configuraciones"
             android:icon="@drawable/ic_settings"
-            android:title="Configuraciones" />
+            android:title="Ajustes" />
         <item
             android:id="@+id/nav_acerca"
             android:icon="@drawable/ic_info"
