--- a/app/src/main/res/layout/activity_unlock_pin.xml
+++ b/app/src/main/res/layout/activity_unlock_pin.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="32dp"
-    android:background="@color/white"
+    android:background="@color/blanco"
     tools:context=".Login.UnlockPinActivity">
 
     <!-- Título -->
@@ -18,7 +18,7 @@
         android:text="Ingresa tu PIN"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/negro"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/editPin"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:layout_height="wrap_content"
         android:text="Entrar"
         android:backgroundTint="#7d2181"
-        android:textColor="@color/white"
+        android:textColor="@color/blanco"
         android:textAllCaps="false"
         android:padding="12dp"
         app:layout_constraintTop_toBottomOf="@id/editPin"
