--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="azul_oscuro">#0D47A1</color>      <!-- Color principal -->
+    <color name="azul_claro">#1976D2</color>       <!-- Secundario -->
+    <color name="gris">#B0BEC5</color>             <!-- Neutro para fondos -->
+    <color name="blanco">#FFFFFFFF</color>   <!-- Fondo -->
+    <color name="verde">#305f34</color>              <!-- Verde -->
+    <color name="negro">#000000</color>
+
+    <color name="darkPrimary">#121212</color> <!-- Gris oscuro o negro -->
+    <color name="darkSecondary">#1E1E1E</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
 </resources>
