--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="gray_700">#616161</color>
+
+    <!-- Nuevo color para el fondo de la lista/pantalla -->
+    <color name="background_light_gray">#F5F5F5</color>
+
 </resources>
